--- a/A_star/visualization/app/index.html
+++ b/A_star/visualization/app/index.html
@@ -33,15 +33,13 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">visualization</a>
+            <a class="navbar-brand" href="#/">PickAR</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li class="active"><a href="#/">Routing Visualizer</a></li>
             </ul>
           </div>
         </div>
@@ -54,7 +52,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <center><p><span class="glyphicon glyphicon-heart"></span> from the PickAR team</p></center>
       </div>
     </div>
 
