--- a/A_star/visualization/app/index.html
+++ b/A_star/visualization/app/index.html
@@ -59,7 +59,7 @@
       <center>
         <p>
           Made with
-          <span class="glyphicon glyphicon-heart"></span> from the Order Picking team</p>
+          <span class="glyphicon glyphicon-heart"></span> from the PickAR team</p>
       </center>
     </div>
   </div>
